# aig-package

./: .gitignore  CMakeLists.txt  README.md  TODO.md  a.out  aig  makefile  run_tests
documentation/: ASCII_AIGER_FORMAT.md  EXAMPLES.md  NOTES.md
examples/: and2_redundant.aag  full_adder.aag  invert.aag  max.aig
examples/blif/: full_adder.blif
examples/outputs/: and2_redundant_sweeped.aag  full_adder_output.aag
src/: aig.cpp  aig.hpp  bliff.cpp  main.cpp  sweep.hpp
tests/: test_aig.cpp
